# robotkernel

./: .buildbot.yaml  .dir-locals.el  .gitignore  AUTHORS  BUILD.md  CMakeLists.txt  Jenkinsfile  Makefile.am  Makefile.defs  Makefile.suggested  README  README.md  README.wiki  RMC-Jenkinsfile  archs.mk  autogen.sh  conanfile.msgdef.py  conanfile.py  configure.ac  configure.ac.in  conftest  conftest.c  doxyfile  project.properties  rmc-build.yaml  robotkernel.pc.in  robotkernel.pt  robotkernel.pt.in  supported_archs.mk  svn_ignores
.github/workflows/: build-deb.yaml  c-cpp.yml  cmake-single-platform.yml
config/misc/: biotac_bbb
config/rollin_justin/: cfg.rkc  cfg2.rkc  cfg_ecat.rkc  cfg_pycommand.rkc  cfg_test.rkc  module_heinzmann.rkc  module_lnrkinterface.rkc  module_sercos.rkc  module_sercos_first.rkc  module_sercos_second.rkc  module_soem.rkc
config/space_justin/: cfg.rkc  lnrkinterface.rkc  module_sercos_head_torso.rkc  module_sercos_head_torso_small.rkc  module_sercos_left.rkc  module_sercos_right.rkc
config/toro/: cfg.rkc  cfg_fts.rkc  cfg_sercos.rkc  cfg_xsens.cfg  lnrkinterface.rkc  module_sercos_legs.rkc  module_sercos_upper.rkc
debian/: README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  robotkernel-dev.install  robotkernel.cron.d.ex  robotkernel.doc-base.EX  robotkernel.install  robotkernel.substvars  rules  watch.ex
doc/: rk_uml.xmi  structure.uxf  structure.xmi
gui/: gui_utils.py  kernel_view.py  kernel_wrapper.py  robotkernel_gui  robotkernel_gui.inc.lnc  robotkernel_gui.py
gui/modules/: __init__.py  base_view.py  ihex.py  interface_key_value.py  jitter_view.py  lnrk_explorer.py  lnrk_wrapper.py  rk_interface.py  sercos_diag_subview.py  sercos_flasher_subview.py  sercos_id_subview.py  sercos_param_subview.py  sercos_processdata_subview.py  sercos_view.py  sercos_wrapper.py  soem_canopen_subview.py  soem_view.py  soem_wrapper.py
gui/resources/: base.ui  default.ui  dual_list.ui  dual_list_kernel.ui  dual_list_vertical.ui  interface_key_value.ui  jitter.ui  lnrk_explorer.ui  main.ui  parameter.yaml  robotkernel.ui  sercos_flasher.ui  tab.ui
include/robotkernel/: bridge_base.h  cmd_delay.h  device.h  device_listener.h  exceptions.h  helpers.h  interface.h  interface_base.h  interface_intf.h  kernel.h  kernel_c_wrapper.h  kernel_queue.h  kernel_worker.h  log_base.h  log_thread.h  loglevel.h  module.h  module_base.h  module_intf.h  process_data.h  rk_type.h  robotkernel.h  runnable.h  service.h  service_interface.h  service_provider_base.h  stream.h  trigger.h  trigger_base.h  trigger_collector.h  trigger_worker.h
m4/: ac_check_pthread_setname_np.m4  rmpm.m4
model/: static view.xml
msgdef_test_package/: conanfile.py
rk_test_package/: conanfile.py
scripts/: Makefile.suggested  angstrom-armv7-gcc4.7.env  arch_from_dlrrm  arm-angstrom-linux-gnueabi.env  cache  get_ln_base.py  ignore_files  linux-gnueabi-rmpm-hack.sh  pkg_versions.env  qnx6.3-x86-gcc3.3.env  qnx6.5-x86-gcc4.x-gpp.env  qnx6.5-x86-gcc4.x.env  sled11-x86-gcc4.x.env  sled11-x86_64-gcc4.x.env  ubuntu12.04-armhf-gcc4.x.env  vxworks6.7-x86-gcc4.x.env  vxworks6.8-x86-gcc4.x.env
scripts/m4/: rmpm.m4
share/: robotkernel.inc.lnc
share/ln/: generate_ln_includes  robotkernel.inc.lnc  robotkernel.inc.lnc.in  robotkernel_gui.inc.lnc
share/ln/message_definitions/: robotkernel_module_list  robotkernel_power_up  robotkernel_remove_module  robotkernel_string
share/ln/message_definitions/robotkernel/: add_module  get_dump_log  reconfigure_module  set_state
share/module_example/: Makefile.am  configure.ac  module_example.cpp
share/module_example/m4/: rmpm.m4
share/robotkernel/service_definitions/kernel/: del_pd_injection  get_dump_log  list_devices  list_pd_injections  module_list  stream_info  (+1 more)
share/service_definitions/: conanfile.py
src/: Makefile.am  bridge.cpp  bridge.h  char_ringbuffer.cpp  char_ringbuffer.h  cmd_delay.h  dump_log.cpp  dump_log.h  exceptions.cpp  exceptions.h  helpers.cpp  helpers.h  interface.cpp  interface.h  interface_base.cpp  kernel.cpp  kernel.h  kernel_c_wrapper.cpp  kernel_queue.h  kernel_worker.cpp  kernel_worker.h  log_base.cpp  log_thread.cpp  log_thread.h  lttng_tp.cpp  lttng_tp.h  main.cpp  module.cpp  module.h  module_base.cpp  module_intf.cpp  process_data.cpp  rk_type.cpp  rkc_loader.cpp  rkc_loader.h  robotkernel.cpp  runnable.cpp  runnable.h  service_provider.cpp  service_provider.h  (+7 more)
src/main/cpp/: Makefile.am  bridge.cpp  bridge.h  bridge_base.cpp  char_ringbuffer.cpp  char_ringbuffer.h  cli_bridge.cpp  cli_server.cpp  cli_server.h  dump_log.cpp  exceptions.cpp  helpers.cpp  interface.cpp  interface_base.cpp  jsonrpc_bridge.cpp  kernel.cpp  kernel.h  kernel_base.cpp  kernel_c_wrapper.cpp  kernel_worker.cpp  ln_bridge.cpp  log_base.cpp  log_thread.cpp  main.cpp  module.cpp  module_base.cpp  module_intf.cpp  process_data.cpp  rk_type.cpp  rkc_loader.cpp  rkc_loader.h  robotkernel.cpp  rt_helper.cpp  rt_type.cpp  runnable.cpp  service_definitions.cpp  service_provider.cpp  service_provider_base.cpp  so_file.cpp  so_file.h  (+5 more)
src/main/cpp/include/robotkernel/: bridge.h  bridge_base.h  bridge_interface.h  bridge_intf.h  char_ringbuffer.h  cli_bridge.h  cmd_delay.h  device.h  device_listener.h  dump_log.h  exceptions.h  helpers.h  interface.h  interface_base.h  interface_intf.h  jsonrpc_bridge.h  kernel.h  kernel_base.h  kernel_c_wrapper.h  kernel_worker.h  ln_bridge.h  log_base.h  log_thread.h  loglevel.h  lttng_tp.h  module.h  module_base.h  module_intf.h  process_data.h  process_data_device.h  rk_type.h  rkc_loader.h  rt_helper.h  runnable.h  service.h  service_collector_device.h  service_interface.h  service_provider.h  service_provider_base.h  service_provider_intf.h  (+8 more)
src/message_definitions/robotkernel/: config_dump_log  get_state  get_states
src/message_definitions/robotkernel/module/: get_config  get_feat
src/test/cpp/: test_cli_server.cpp
test_package/: conanfile.py
(+28 files in other folders)
